[tool.poetry]
name = "sharenote-planner"
version = "0.1.0"
description = ""
authors = ["nanovex <nanovex@ohstr.com>"]
readme = "README.md"
# package-mode = false
packages = [
    { include = "components" },
]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.50.0"
pandas = "^2.3.3"
numpy = "^2.3.4"
sharenotelib = "^0.1.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
